[package]
name = "sau"
description = "Steam Achievement Unlocker"
version = "1.0.1"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
repository = "https://github.com/mbwilding/SteamAchievementUnlocker"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.29"
openssl = { version = "0.10", features = ["vendored"] }
ratatui = "0.30"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
steamworks = "0.12"

[build-dependencies]
glob = "0.3"

[profile.release]
opt-level = "z"         # Optimize for size.
lto = true              # Enable Link Time Optimization.
codegen-units = 1       # Reduce the number of codegen units to enhance optimization.
strip = true            # Remove symbol information for a smaller binary.
panic = "abort"         # Aborts on panic, reducing the binary size.
incremental = false     # Disable incremental compilation.
overflow-checks = false # Disable overflow checks if not required (unsafe).

[profile.dev.package."*"]
opt-level = 2
