[package]
name = "sam"
description = "Steam Achievement Manager"
version = "2.0.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
repository = "https://github.com/mbwilding/steam-achievement-manager"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
confy = "2.0"
crossterm = "0.29"
gag = "1.0.0"
openssl = { version = "0.10", features = ["vendored"] }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
steamworks = "0.12"

[build-dependencies]
glob = "0.3"

[profile.release]
opt-level = "z"         # Optimize for size.
lto = true              # Enable Link Time Optimization.
codegen-units = 1       # Reduce the number of codegen units to enhance optimization.
strip = true            # Remove symbol information for a smaller binary.
panic = "abort"         # Aborts on panic, reducing the binary size.
incremental = false     # Disable incremental compilation.
overflow-checks = false # Disable overflow checks if not required (unsafe).

[profile.dev.package."*"]
opt-level = 2
