[package]
name = "sau"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "SAU"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
xmltree = "0.11.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
