[package]
name = "sau_worker"
description = "Steam Achievement Unlocker - Worker"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
readme = "../../README.md"
build = "build.rs"

[[bin]]
name = "SAU-Worker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
steamworks = "0.11.0"

[build-dependencies]
glob = "0.3.2"
